gccida/g1/gen_variable_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:10932:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:10935:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v16; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:10958:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:11003:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:11011:13: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'uint64 *' (aka 'unsigned long long *'))
rtx = ( rtx)*( ( _QWORD *)&val_addr->block.common + 2); 
      ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:11024:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtx[1] != 10 ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:11025:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:11044:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/dwarf2out.c:11062:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4387, "AT_flag"); 
                             ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_variable_die/src/obj/dwarf2out.o] Error 1
